// This Source Code Form is subject to the terms of the GNU GPL-3.0 License.
// If a copy of the GPL-3.0 was not distributed with this file, You can obtain one at https://www.gnu.org/licenses/gpl-3.0.en.html.
// Copyright (C) 2022 Leszek Pomianowski.
// All Rights Reserved.

syntax = "proto3";

option csharp_namespace = "Genius.Protocol";

package Genius.Protocol;

service Solver {
	rpc Ask(SolverQuestion) returns (SolverResponse);
}

enum SolverType {
    CONDITIONAL = 0;
    CONDITIONAL_STRICT = 1;
    CONDITIONAL_NOT_CONFIDENT = 2;
    FUZZY = 3;
    FUZZY_MULTI_VALUE = 4;
}

message SolverQuestion {
	int32 system_id = 1;
	bool multiple = 2;
    SolverType type = 3;
    repeated int32 confirming = 4;
	repeated int32 negating = 5;
	repeated int32 indifferent = 6;
}

message SolverResponse {
	int32 system_id = 1;
	bool is_solved = 2;
	bool multiple = 3;
	int32 status = 4;
	int32 next_condition = 5;
	repeated int32 products = 6;
}
